# musicTour

./: LICENSE.txt  README.md  __init__.py  allArtists.json  allArtistsStyles.json  pyproject.toml  script.py  setup.py
src/musicTour/: __init__.py  allStyles.json  musicTour.py
src/musicTour_Nathan_Arditti.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
