[project]
name = "musicTour"
version = "1.5.0"
authors = [
  { name="Nathan Arditti", email="nath.arditti@yahoo.fr" },
]
description = "Get all the artists and/or all styles of the world"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SnowDhrop/musicTour"